<resources>
    <string name="app_name">Rider</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="carriage">Carriage</string>
    <string name="with_culift">with CULift</string>
    <string name="netID_signin">Sign in using your NetID</string>
    <string name="netid">NetID</string>
    <string name="password">Password</string>
    <string name="forgotText"><a href="http://www.google.com"> <u> Forgot your password? </u> </a></string>
    <string name="sign_in">Sign In</string>
    <string name="your_profile">Your Profile</string>
    <string name="request_text">+  Request Ride</string>
    <string name="app_server_client_id">322014396101-q7vtrj4rg7h8tlknl1gati2lkbdbu3sp.apps.googleusercontent.com</string>
    <string name="server_client_id">322014396101-8u88pc3q00v6dre4doa64psr9349bhum.apps.googleusercontent.com</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="title_activity_settings">Settings</string>
    <string name="account_info">Account Info</string>
    <string name="personal_info">Personal Info</string>
    <string name="locations">Locations</string>
    <string name="add_home">Add Home</string>
    <string name="add_favorites">Add Favorites</string>
    <string name="privacy">Privacy</string>
    <string name="legal">Legal</string>
    <string name="terms_of_service_privacy_policy"><![CDATA[Terms of service & Privacy Policy]]></string>
    <string name="choose_what_data_you_share_with">Choose what data you share with</string>
    <string name="sign_out">Sign Out</string>
    <string name="request_ride">Request Ride</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="pickup">Pickup*</string>
    <string name="drop_off">Drop-off</string>
    <string name="location">Location</string>
    <string name="date_time"><![CDATA[Date & Time]]></string>
    <string name="date">Date*</string>
    <string name="drop_off_time">Drop-off Time*</string>
    <string name="accessibility_request">Accessibility Request</string>
    <string name="additional_notes">Additional Notes</string>
    <string name="send_request">Send Request</string>
    <string name="cancel">Cancel</string>
    <string name="pickup_text">Pickup</string>
    <string name="drop_off_header">Drop-off</string>
    <string name="sign_in_success">Successful Sign In</string>
    <string name="token_error">Token Error</string>
    <string name="gsi_error">Google Sign In Error</string>
    <string name="failed">Failed</string>
    <string name="wheelchair">Wheelchair</string>
    <string name="is_selected">is selected</string>
    <string name="schedule">Schedule</string>
</resources>
