<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RequestActivity">

    <TextView
        android:id="@+id/requestRideLabel"
        style="@style/TextAppearance.MaterialComponents.Headline4"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/blackColor"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/label_margin"
        android:text="@string/request_ride"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/requestRideScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@+id/requestRideLabel">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/locationCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/border_width"
                android:clipChildren="false"
                android:clipToPadding="false"
                app:cardCornerRadius="10dp"
                app:cardElevation="15dp"
                app:cardPreventCornerOverlap="false">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="156dp">

                    <TextView
                        android:id="@+id/locationLabel"
                        style="@style/TextAppearance.MaterialComponents.Headline5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/label_margin"
                        android:layout_marginTop="@dimen/label_margin"
                        android:paddingTop="@dimen/view_margin"
                        android:text="@string/location"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@id/pickupEditText" />

                    <EditText
                        android:id="@+id/pickupEditText"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="@dimen/label_margin"
                        android:layout_marginTop="@dimen/view_margin"
                        android:layout_marginRight="@dimen/left_label_margin"
                        android:background="@drawable/et_style"
                        android:ellipsize="start"
                        android:hint="@string/pickup"
                        android:inputType="text"
                        android:padding="5dp"
                        app:layout_constraintTop_toBottomOf="@id/locationLabel" />

                    <EditText
                        android:id="@+id/drop-offEditText"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="@dimen/label_margin"
                        android:layout_marginTop="@dimen/view_margin"
                        android:layout_marginRight="@dimen/left_label_margin"
                        android:background="@drawable/et_style"
                        android:ellipsize="start"
                        android:hint="@string/drop_off"
                        android:inputType="text"
                        android:padding="5dp"
                        app:layout_constraintTop_toBottomOf="@+id/pickupEditText" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/dateTimeCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/border_width"
                android:clipChildren="false"
                android:clipToPadding="false"
                app:cardCornerRadius="10dp"
                app:cardElevation="15dp"
                app:cardPreventCornerOverlap="false">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="156dp">

                    <TextView
                        android:id="@+id/dateTimeLabel"
                        style="@style/TextAppearance.MaterialComponents.Headline5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/label_margin"
                        android:layout_marginTop="@dimen/label_margin"
                        android:paddingTop="@dimen/view_margin"
                        android:text="@string/date_time"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@id/dateEditText" />

                    <EditText
                        android:id="@+id/dateEditText"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="@dimen/label_margin"
                        android:layout_marginTop="@dimen/view_margin"
                        android:layout_marginRight="@dimen/left_label_margin"
                        android:background="@drawable/et_style"
                        android:ellipsize="start"
                        android:hint="@string/date"
                        android:padding="5dp"
                        app:layout_constraintTop_toBottomOf="@id/dateTimeLabel" />

                    <EditText
                        android:id="@+id/dropTimeEditText"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="@dimen/label_margin"
                        android:layout_marginTop="@dimen/view_margin"
                        android:layout_marginRight="@dimen/left_label_margin"
                        android:background="@drawable/et_style"
                        android:ellipsize="start"
                        android:hint="@string/drop_off_time"
                        android:inputType="text"
                        android:padding="5dp"
                        app:layout_constraintTop_toBottomOf="@+id/dateEditText" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/accessibilityRequestLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/border_width"
                android:clipChildren="false"
                android:clipToPadding="false"
                app:cardCornerRadius="10dp"
                app:cardElevation="15dp"
                app:cardPreventCornerOverlap="false">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="84dp">

                    <TextView
                        android:id="@+id/accessibilityLabel"
                        style="@style/TextAppearance.MaterialComponents.Headline5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/label_margin"
                        android:layout_marginTop="@dimen/label_margin"
                        android:paddingTop="@dimen/view_margin"
                        android:text="@string/accessibility_request"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@id/wheelchair" />

                    <CheckBox
                        android:id="@+id/wheelchair"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/label_margin"
                        android:text="@string/wheelchair"
                        android:textColor="@color/grayColor"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/accessibilityLabel">

                    </CheckBox>

                </androidx.constraintlayout.widget.ConstraintLayout>


            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/border_width"
                android:clipChildren="false"
                android:clipToPadding="false"
                app:cardCornerRadius="10dp"
                app:cardElevation="15dp"
                app:cardPreventCornerOverlap="false">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="166dp">

                    <TextView
                        android:id="@+id/additionalLabel"
                        style="@style/TextAppearance.MaterialComponents.Headline5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/label_margin"
                        android:layout_marginTop="@dimen/label_margin"
                        android:paddingTop="@dimen/view_margin"
                        android:text="@string/additional_notes"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@id/additionalEditText" />

                    <EditText
                        android:id="@+id/additionalEditText"
                        android:layout_width="match_parent"
                        android:layout_height="98dp"
                        android:layout_marginLeft="@dimen/label_margin"
                        android:layout_marginTop="@dimen/view_margin"
                        android:layout_marginRight="@dimen/left_label_margin"
                        android:background="@drawable/et_style"
                        android:inputType="text"
                        app:layout_constraintTop_toBottomOf="@id/additionalLabel" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">


        <Button
            android:id="@+id/requestRide"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:background="@color/blackColor"
            android:contentDescription="@string/request_ride"
            android:drawableLeft="@drawable/ic_near_me_black_24dp"
            android:paddingLeft="100dp"
            android:paddingRight="100dp"
            android:text="@string/send_request"
            android:textAllCaps="false"
            android:textColor="@color/whiteColor"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent" />

    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>