<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PickUpActivity">

    <TextView
        android:id="@+id/cancelText"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="55dp"
        android:layout_height="20dp"
        android:layout_marginStart="@dimen/left_label_margin"
        android:layout_marginTop="@dimen/drawable_margin"
        android:text="@string/cancel"
        android:textColor="@color/blackColor"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pickupText"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="@dimen/drawable_margin"
        android:text="@string/pickup_text"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/cancelText"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/pickupEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="@dimen/label_margin"
        android:layout_marginTop="@dimen/left_label_margin"
        android:layout_marginRight="@dimen/left_label_margin"
        android:background="@drawable/et_style"
        android:ellipsize="start"
        android:gravity="top"
        android:hint="@string/pickup"
        android:inputType="text"
        android:padding="5dp"
        android:textColorHint="@color/blackColor"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/pickupText" />

    <TextView
        android:id="@+id/pickup_home"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/drawable_margin"
        android:layout_marginTop="@dimen/left_label_margin"
        android:drawableLeft="@drawable/ic_home_black_24dp"
        android:drawablePadding="@dimen/view_margin"
        android:text="Home (151 Dryden Road)"
        android:textColor="@color/blackColor"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pickupEditText" />

    <TextView
        android:id="@+id/pickup_gates"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/drawable_margin"
        android:layout_marginTop="@dimen/left_label_margin"
        android:drawableStart="@drawable/ic_location_on_black_24dp"
        android:drawablePadding="@dimen/view_margin"
        android:text="Bill &amp; Melinda Gates Hall"
        android:textColor="@color/blackColor"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pickup_home" />

    <TextView
        android:id="@+id/pickup_barton"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/drawable_margin"
        android:layout_marginTop="@dimen/left_label_margin"
        android:drawableLeft="@drawable/ic_location_on_black_24dp"
        android:drawablePadding="@dimen/view_margin"
        android:text="Barton Hall"
        android:textColor="@color/blackColor"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pickup_gates" />

    <TextView
        android:id="@+id/pickup_psb"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/drawable_margin"
        android:layout_marginTop="@dimen/left_label_margin"
        android:drawableStart="@drawable/ic_location_on_black_24dp"
        android:drawablePadding="@dimen/view_margin"
        android:text="Physical Sciences Building"
        android:textColor="@color/blackColor"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pickup_barton" />

</androidx.constraintlayout.widget.ConstraintLayout>